--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
     
     <div class="container-fluid" style="max-width: 1200px; padding-top: 0.75em">
         <div class="list-group">
-                <a href="tetris/" class="list-group-item list-group-item-action">Tetris <span>10/08/2019</span></a>
+            <a href="tetris/" class="list-group-item list-group-item-action">Tetris <span>10/08/2019</span></a>
         </div>
     </div>
 
+    <div id="game-container">
+        <!-- Jeu Tetris ici -->
+    </div>
+    <div id="controls">
+        <button id="left-button">⬅️</button>
+        <button id="rotate-button">⬆️</button>
+        <button id="right-button">➡️</button>
+        <button id="down-button">⬇️</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
